--- a/5-trik-mudah-menang-ala-mbah-gacor.html
+++ b/5-trik-mudah-menang-ala-mbah-gacor.html
@@ -316,7 +316,7 @@
               <p><strong>Cara menggunakan fitur ini:</strong></p>
               <ol>
                 <li><strong>Mainkan 50-70 spin secara normal</strong></li>
-                <li>Jika <strongbelum ada tanda scatter muncul dalam 70 spin, gunakan fitur Buy Free Spins.</strong></li>
+                <li>Jika <strong>belum ada tanda scatter muncul dalam 70 spin, gunakan fitur Buy Free Spins.</strong></li>
                 <li>Pilih game yang memiliki fitur multiplier tinggi seperti <strong>Gates of Olympus atau Starlight Princess.</strong></li>
               </ol>
               <p><strong>💡 Pro Tip:</strong> Jangan langsung buy free spins di awal! Pastikan sudah ada tanda scatter sering muncul sebelum membelinya.</p>
